# rostpy

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
examples/: rost_model_statistics.ipynb  rost_repeated_runs_statistics.ipynb
src/rostpy/: __init__.py  __main__.py  bindings.cpp  utils.py
tests/: conftest.py  test_bindings.py  test_main.py  test_utils.py
