[build-system]
requires = [
    "wheel",
    "setuptools>=42",
    "setuptools_scm>=6.2",
    "ninja",
    "pybind11>=2.7.0",
]
build-backend = "setuptools.build_meta"

[tools.setuptools_scm]
write_to = "src/rostpy/_version.py"

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_24_x86_64"

[tool.cibuildwheel.linux]
before-all = [
    "apt-get update",
    "apt-get install -y git cmake libboost-all-dev",
    "git submodule init",
    "git submodule update"
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
