[metadata]
name = rostpy
description = Python bindings for ROST
long_description = file: README.md
version = 0.1.0
long_description_content_type = text/markdown
url = https://gitlab.com/warplab/rostpy
author = John San Soucie
author_email = jsansoucie@whoi.edu
maintainer = John San Soucie
maintainer_email = jsansoucie@whoi.edu
license = MIT
license_file = LICENSE.txt
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: MIT
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://rostpy.readthedocs.io/
    Bug Tracker = https://gitlab.com/warplab/rostpy/issues
    Discussions = https://gitlab.com/warplab/rostpy/discussions
    Changelog = https://gitlab.com/warplab/rostpy/releases

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
install_requires = 
    click

[options.entry_points]
console_scripts = 
    rostpy = rostpy.__main__:cli

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6
docs =
    Sphinx>=4.0
    myst-parser>=0.13
    sphinx-book-theme>=0.1.0
    sphinx-copybutton
test =
    pytest>=6

[flake8]
extend-ignore = E203, E501, E722, B950
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T
    noxfile.py: T
